[project]
name = "aitools-llm-proxy-healthchecker"
version = "0.1.0"
description = "AI Tools LLM Proxy Health Checker - Test Connection to Educational proxy server for multiple LLM providers"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anthropic==0.64.0",
    "anyio==4.10.0",
    "bcrypt==4.3.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "click==8.2.1",
    "cryptography==45.0.6",
    "distro==1.9.0",
    "fastapi==0.116.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jiter==0.10.0",
    "numpy==2.3.2",
    "openai==1.99.9",
    "packaging==25.0",
    "pandas==2.3.1",
    "passlib==1.7.4",
    "pluggy==1.6.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-httpx==0.35.0",
    "pytest-mock==3.14.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uvicorn==0.35.0",
]
